Feat : 분산락 설정 추가 (redis,redisson,aop)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,14 @@ services:
     volumes:
       - ./data/mysql/:/var/lib/mysql
 
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data/redis:/data
+    command: redis-server --appendonly yes  # 데이터 지속성을 위한 AOF 설정
+
 networks:
   default:
     driver: bridge
