--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,16 @@ spring:
           connectionPoolSize: 10
           connectTimeout: 10000
           timeout: 3000
+  kafka:
+    bootstrap-servers: localhost:29092
+    consumer:
+      group-id: my-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 springdoc:
   api-docs:
     enabled: true
