--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,8 +41,15 @@ spring:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     producer:
+      acks: all
+      retries: 3
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      properties:
+        min.insync.replicas: 2    # 최소 동기화 복제본 수
+        replication.factor: 3     # 복제본 수
+        max.in.flight.requests.per.connection: 1  # 동시 요청 수
+        enable.idempotence: true
 springdoc:
   api-docs:
     enabled: true
