Feat : 부하테스트 관련 설정 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,27 @@
 version: '3'
 services:
+  spring:
+    container_name: spring
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=load-test
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 2048M
+        reservations:
+          cpus: '2.0'
+          memory: 2048M
+    depends_on:
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
   mysql:
     image: mysql:8.0
     ports:
@@ -11,6 +33,11 @@ services:
       - MYSQL_DATABASE=hhplus
     volumes:
       - ./data/mysql/:/var/lib/mysql
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p$$MYSQL_ROOT_PASSWORD" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   redis:
     image: redis:latest
@@ -19,6 +46,11 @@ services:
     volumes:
       - ./data/redis:/data
     command: redis-server --appendonly yes  # 데이터 지속성을 위한 AOF 설정
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -56,6 +88,48 @@ services:
       - kafka
       - zookeeper
 
+  influxdb:
+    image: influxdb:1.8
+    container_name: influxdb
+    networks:
+      - default
+    ports:
+      - "8086:8086"
+    environment:
+      - INFLUXDB_DB=k6
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    networks:
+      - default
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+      - GF_AUTH_ANONYMOUS_ENABLED=true
+      - GF_AUTH_BASIC_ENABLED=false
+    volumes:
+        - ./grafana:/etc/grafana/provisioning/
+
+  k6:
+    image: grafana/k6:latest
+    container_name: k6
+    networks:
+      - default
+    ports:
+      - "6565:6565"
+    environment:
+      - K6_OUT=influxdb=http://influxdb:8086/k6
+    volumes:
+      - ./k6:/scripts
+    entrypoint: [ "k6", "run", "/scripts/coupon-test.js" ]
+
+
 networks:
   default:
     driver: bridge
+
+volumes:
+  prometheus_data:
+  grafana_data:
